# imgtk

./: .gitignore  README.md  pyproject.toml  tasks.py
imgtk/: __init__.py  cli.py
imgtk/deduplicate/: __init__.py  deduplicate.py
imgtk/exifsort/: exifsort.py
imgtk/i2p/: i2p.py
imgtk/imgtk/: __init__.py  imgtk.py
imgtk/join/: __init__.py
