[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "imgtk"
authors = [
    { name = "koma", email = "okunoya@path-works.net"},
]
description = "Image file manipulation toolkit"
readme = "README.md"
requires-python = ">=3.9"
#keywords = ["one", "two"]
license = {text = "LICENSE"}
classifiers = [
    # Maturity of the project
    # 3 - Alpha
    # 4 - Beta
    # 5 - Production/Stable
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Topic :: Utilities',
]
dependencies = [
    'click>=8,<9',
    'PyYaml>=6,<7',
]
dynamic = ["version"]

# [project.optional-dependencies]
# dev = ["pyinstaller"]

[project.scripts]
imgtk = "imgtk.cli:main"

[tool.setuptools.packages.find]
exclude = ["build", "test"]

[tool.setuptools.dynamic]
version = {attr = "imgtk.__version__"}